REFACTOR: Rewrite old classes to builder mapper pattern (#3)
* Adjust to java 17

* ProjectDTO and model to builder and mapper pattern

* Refactored Experience to builder and mapper

* Refactor skill to builder and mapper. Refactor to mappers in services

* Fix tests

* Run prettier

* Test for test failure

* Fix the test